# project-NikanV

./: CMakeLists.txt  README.md
src/: functions.c  functions.h  game_logics.c  init_end.c  main.c  main_menu.c  user_works.c  variables.c  variables.h
